cmake_minimum_required(VERSION 3.19)
project(cppDemo)

set(CMAKE_CXX_STANDARD 14)

add_executable(cppDemo main.cpp day1/print_demo.cpp day1/print_demo.h day1/leap_year.h day1/union_practice.h day1/power_n.h day1/roll_dice.h day2/enum_demo.h day2/request_pi.h day2/hanoi.h day2/struct_demo.h day2/recursion_1.h day2/recursion_2.h day2/static_var.h day3/swip_num.h day3/inline_demo.h day3/combine_demo.h day3/circlesss.h day3/circlesss.cpp day3/Circle.cpp day3/Circle.h)